syntax = "proto3";

import "google/api/annotations.proto";

package guestbook.v1;

service GuestBook {
  rpc AddPost (AddPostRequest) returns (AddPostResponse) {
    option (google.api.http) = {
      post: "/v1/posts"
      body: "*"
    };
  }
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse) {
    option (google.api.http) = {
      put: "/v1/posts/{id}"
      body: "*"
    };
  }
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse) {
    option (google.api.http) = {
      get: "/v1/posts"
    };
  }
}

message AddPostRequest {
  string title = 1;
  string body = 2;
}

message AddPostResponse {
  string id = 1;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string body = 3;
}

message UpdatePostResponse {}

message ListPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string body = 3;
}